--- a/DataAnalysis.ipynb
+++ b/DataAnalysis.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -739,12 +739,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Clin Seed</th>\n",
+       "      <th>Clin</th>\n",
+       "      <th>Random</th>\n",
+       "      <th>SW</th>\n",
+       "      <th>Centered</th>\n",
+       "      <th>Peaks</th>\n",
+       "      <th>CG Erf Seed</th>\n",
+       "      <th>CG Erf</th>\n",
+       "      <th>CG Unit Seed</th>\n",
+       "      <th>CG Unit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>48.000000</td>\n",
+       "      <td>48.000000</td>\n",
+       "      <td>48.000000</td>\n",
+       "      <td>48.000000</td>\n",
+       "      <td>48.000000</td>\n",
+       "      <td>48.000000</td>\n",
+       "      <td>48.000000</td>\n",
+       "      <td>48.000000</td>\n",
+       "      <td>48.000000</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>578.618008</td>\n",
+       "      <td>2.055268</td>\n",
+       "      <td>172.822623</td>\n",
+       "      <td>81.626435</td>\n",
+       "      <td>1027.046676</td>\n",
+       "      <td>5.998382</td>\n",
+       "      <td>28.783781</td>\n",
+       "      <td>8.464134</td>\n",
+       "      <td>572.855143</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1136.708249</td>\n",
+       "      <td>2.102771</td>\n",
+       "      <td>448.140084</td>\n",
+       "      <td>236.404812</td>\n",
+       "      <td>1969.967143</td>\n",
+       "      <td>5.212987</td>\n",
+       "      <td>26.064306</td>\n",
+       "      <td>16.901626</td>\n",
+       "      <td>1117.023929</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>3.425617</td>\n",
+       "      <td>0.523657</td>\n",
+       "      <td>5.679022</td>\n",
+       "      <td>2.813123</td>\n",
+       "      <td>3.577025</td>\n",
+       "      <td>1.075574</td>\n",
+       "      <td>2.383787</td>\n",
+       "      <td>0.748323</td>\n",
+       "      <td>2.947407</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>31.811356</td>\n",
+       "      <td>0.948416</td>\n",
+       "      <td>18.644246</td>\n",
+       "      <td>5.885187</td>\n",
+       "      <td>35.540281</td>\n",
+       "      <td>3.185244</td>\n",
+       "      <td>11.306445</td>\n",
+       "      <td>1.810135</td>\n",
+       "      <td>31.998832</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>117.169656</td>\n",
+       "      <td>1.402968</td>\n",
+       "      <td>36.923392</td>\n",
+       "      <td>9.755888</td>\n",
+       "      <td>225.673245</td>\n",
+       "      <td>4.411226</td>\n",
+       "      <td>21.832325</td>\n",
+       "      <td>2.914322</td>\n",
+       "      <td>125.285494</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>636.204413</td>\n",
+       "      <td>2.023923</td>\n",
+       "      <td>146.737514</td>\n",
+       "      <td>17.967071</td>\n",
+       "      <td>1124.134819</td>\n",
+       "      <td>6.548610</td>\n",
+       "      <td>37.121728</td>\n",
+       "      <td>6.067490</td>\n",
+       "      <td>635.460845</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>5530.333860</td>\n",
+       "      <td>12.475735</td>\n",
+       "      <td>3021.699128</td>\n",
+       "      <td>1132.046414</td>\n",
+       "      <td>9431.166104</td>\n",
+       "      <td>31.231162</td>\n",
+       "      <td>129.465970</td>\n",
+       "      <td>103.592356</td>\n",
+       "      <td>5262.860769</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Clin Seed       Clin       Random           SW     Centered  \\\n",
+       "count    48.000000  48.000000    48.000000    48.000000    48.000000   \n",
+       "mean    578.618008   2.055268   172.822623    81.626435  1027.046676   \n",
+       "std    1136.708249   2.102771   448.140084   236.404812  1969.967143   \n",
+       "min       3.425617   0.523657     5.679022     2.813123     3.577025   \n",
+       "25%      31.811356   0.948416    18.644246     5.885187    35.540281   \n",
+       "50%     117.169656   1.402968    36.923392     9.755888   225.673245   \n",
+       "75%     636.204413   2.023923   146.737514    17.967071  1124.134819   \n",
+       "max    5530.333860  12.475735  3021.699128  1132.046414  9431.166104   \n",
+       "\n",
+       "           Peaks  CG Erf Seed      CG Erf  CG Unit Seed  CG Unit  \n",
+       "count  48.000000    48.000000   48.000000     48.000000       48  \n",
+       "mean    5.998382    28.783781    8.464134    572.855143        1  \n",
+       "std     5.212987    26.064306   16.901626   1117.023929        0  \n",
+       "min     1.075574     2.383787    0.748323      2.947407        1  \n",
+       "25%     3.185244    11.306445    1.810135     31.998832        1  \n",
+       "50%     4.411226    21.832325    2.914322    125.285494        1  \n",
+       "75%     6.548610    37.121728    6.067490    635.460845        1  \n",
+       "max    31.231162   129.465970  103.592356   5262.860769        1  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "objs_scaled_df[objs_scaled_df[:]<1000].describe()"
+   ]
   },
   {
    "cell_type": "code",
