--- a/DataAnalysis.ipynb
+++ b/DataAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -30,7 +30,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[u'maxAper       ' u'sin2scale     ' u'sin2multiplier']\n"
+      "[u'maxAper ' u'numBins ' u'minRange']\n"
      ]
     }
    ],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -102,6 +102,7 @@
     "# targetType = 'Error Functions'\n",
     "\n",
     "#F = io.loadmat('k_b_c_runsout.mat')\n",
+    "\n",
     "headings = ['Clin Seed', 'Clin', 'Random','SW','Centered', 'Peaks','CG Erf Seed', 'CG Erf','CG Unit Seed', 'CG Unit']\n",
     "print F['paramNames']\n",
     "testRatioPosition = 9"
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -118,18 +119,158 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\\begin{tabular}{lrrrrrrrrrr}\n",
+      "[u'maxAper ' u'numBins ' u'minRange']\n"
+     ]
+    }
+   ],
+   "source": [
+    "savefolder = '/media/troy/DataDrive/Dropbox/PythonLS/leafseq/figsClinKnew/'\n",
+    "\n",
+    "basefolder = 'stepOrder2ClinK/'\n",
+    "F = io.loadmat(basefolder + 'stepFunctionOutOrder2.mat')\n",
+    "targetType = 'Spline Step'\n",
+    "\n",
+    "# basefolder = 'stepOrder0ClinK/'\n",
+    "# F = io.loadmat(basefolder + 'stepFunctionOutOrder0.mat')\n",
+    "# targetType = 'Unit Step'\n",
+    "\n",
+    "# basefolder = 'doublesinClinK/'\n",
+    "# F = io.loadmat(basefolder + 'doublesinout.mat')\n",
+    "# targetType = 'Double Sine'\n",
+    "\n",
+    "# basefolder = 'singlesinClinK/'\n",
+    "# F = io.loadmat(basefolder + 'sinout.mat')\n",
+    "# targetType = 'Single Sine'\n",
+    "\n",
+    "# basefolder = 'erfsClinK/'\n",
+    "# F = io.loadmat(basefolder + 'erfsout.mat')\n",
+    "# targetType = 'Error Functions'\n",
+    "\n",
+    "#F = io.loadmat('k_b_c_runsout.mat')\n",
+    "headings = F['runTags'][0]\n",
+    "seedHeadings = [h for h in headings if 'CLO_' not in h]\n",
+    "cloHeadings =  [h for h in headings if 'CLO_' in h]\n",
+    "\n",
+    "#headings = ['Clin Seed', 'Clin', 'Random','SW','Centered', 'Peaks','CG Erf Seed', 'CG Erf','CG Unit Seed', 'CG Unit']\n",
+    "print F['paramNames']\n",
+    "testRatioPosition = 13"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(48, 4)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(48, 14)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print F['objectives'][:,np.ix_([1,2,3,4])].reshape((-1,4)).shape\n",
+    "\n",
+    "F['objectives'].shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8, 10, 12]\n",
+      "[1, 3, 5, 7, 9, 11, 13]\n",
+      "(48, 14)\n",
+      "(48, 7) (48, 7)\n",
+      "(48, 7)\n",
+      "CLO_Conv     75.088665\n",
+      "CLO_Rand      6.549630\n",
+      "CLO_Unif     30.959595\n",
+      "CLO_Cent     74.797702\n",
+      "CLO_Peak     46.062499\n",
+      "CLO_DLO       6.113949\n",
+      "CLO_DLO-U    92.589651\n",
+      "dtype: float64\n",
+      "CLO_Conv       1.239574\n",
+      "CLO_Rand      48.827099\n",
+      "CLO_Unif       9.178319\n",
+      "CLO_Cent     174.824725\n",
+      "CLO_Peak       4.529279\n",
+      "CLO_DLO        2.340561\n",
+      "CLO_DLO-U      1.000000\n",
+      "dtype: float64\n",
+      "                   0           1\n",
+      "CLO_Conv   75.088665    1.239574\n",
+      "CLO_Rand    6.549630   48.827099\n",
+      "CLO_Unif   30.959595    9.178319\n",
+      "CLO_Cent   74.797702  174.824725\n",
+      "CLO_Peak   46.062499    4.529279\n",
+      "CLO_DLO     6.113949    2.340561\n",
+      "CLO_DLO-U  92.589651    1.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "seedIndices = [i for i in range(len(headings)) if 'CLO_' not in headings[i]]\n",
+    "cloIndices = [i for i in range(len(headings)) if 'CLO_' in headings[i]]\n",
+    "print seedIndices\n",
+    "print cloIndices\n",
+    "print F['objectives'].shape\n",
+    "print F['objectives'][:,cloIndices].shape, F['objectives'][:,seedIndices].shape\n",
+    "obj_imp = np.divide(F['objectives'][:,seedIndices],F['objectives'][:,cloIndices])\n",
+    "print obj_imp.shape\n",
+    "\n",
+    "obj_improvement_df = pd.DataFrame(obj_imp,columns = cloHeadings)\n",
+    "print obj_improvement_df.median()\n",
+    "print objs_scaled_df[cloHeadings].median()\n",
+    "objImpVsScaled = pd.concat([obj_improvement_df.median(),objs_scaled_df[cloHeadings].median()],axis = 1)\n",
+    "print objImpVsScaled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{lrrrrrrrrrrrrrr}\n",
       "\\toprule\n",
-      "{} &  Clin Seed &    Clin &   Random &       SW &  Centered &   Peaks &  CG Erf Seed &  CG Erf &  CG Unit Seed &  CG Unit \\\\\n",
+      "{} &  Conv      &  CLO\\_Conv  &  Rand      &  CLO\\_Rand  &  Unif      &  CLO\\_Unif  &  Cent      &  CLO\\_Cent  &  Peak      &  CLO\\_Peak  &  DLO       &  CLO\\_DLO   &  DLO-U     &  CLO\\_DLO-U \\\\\n",
       "\\midrule\n",
-      "count &     48.000 &  48.000 &   48.000 &   48.000 &    48.000 &  48.000 &       48.000 &  48.000 &        48.000 &   48.000 \\\\\n",
-      "mean  &     58.237 &   2.465 &   68.288 &   19.085 &   190.300 &   7.759 &       17.418 &   3.473 &        58.946 &    2.295 \\\\\n",
-      "std   &     14.201 &   4.201 &   90.462 &   40.437 &   208.339 &  13.972 &       20.223 &   4.960 &        14.729 &    4.411 \\\\\n",
-      "min   &     30.488 &   0.022 &    0.425 &    0.292 &     3.199 &   0.051 &        1.302 &   0.306 &        29.002 &    0.014 \\\\\n",
-      "25\\%   &     46.879 &   0.228 &    8.151 &    1.901 &    36.395 &   0.734 &        3.329 &   0.675 &        48.791 &    0.093 \\\\\n",
-      "50\\%   &     59.988 &   0.570 &   22.739 &    6.693 &   133.400 &   2.383 &        7.538 &   1.179 &        60.074 &    0.383 \\\\\n",
-      "75\\%   &     67.770 &   1.981 &   99.914 &   17.266 &   226.417 &   6.411 &       26.454 &   3.943 &        68.031 &    1.898 \\\\\n",
-      "max   &     88.464 &  17.690 &  387.822 &  244.390 &  1042.895 &  64.358 &       77.424 &  21.662 &        92.672 &   21.180 \\\\\n",
+      "count &     48.000 &     48.000 &     48.000 &     48.000 &     48.000 &     48.000 &     48.000 &     48.000 &     48.000 &     48.000 &     48.000 &     48.000 &     48.000 &     48.000 \\\\\n",
+      "mean  &     56.544 &      2.519 &    350.586 &     78.800 &    344.672 &     18.494 &   8126.040 &    182.803 &    162.198 &      8.649 &     18.235 &      3.521 &     57.474 &      2.462 \\\\\n",
+      "std   &     16.637 &      4.918 &    421.794 &    126.931 &    317.990 &     34.015 &   2298.894 &    226.295 &    112.641 &     13.305 &     21.019 &      5.008 &     16.595 &      4.478 \\\\\n",
+      "min   &     28.485 &      0.014 &     14.768 &      0.469 &     80.310 &      0.095 &   3876.665 &      3.509 &     48.222 &      0.038 &      1.474 &      0.344 &     28.392 &      0.006 \\\\\n",
+      "25\\%   &     46.376 &      0.142 &     75.292 &     10.993 &    107.327 &      1.928 &   6624.389 &     28.102 &     73.141 &      0.588 &      3.387 &      0.579 &     46.259 &      0.120 \\\\\n",
+      "50\\%   &     58.585 &      0.669 &    176.143 &     26.300 &    187.322 &      6.136 &   7951.609 &     96.361 &    133.688 &      1.747 &     10.889 &      1.263 &     60.060 &      0.552 \\\\\n",
+      "75\\%   &     64.232 &      2.707 &    548.489 &     80.768 &    463.218 &     19.118 &   9354.866 &    249.296 &    200.985 &      7.682 &     23.183 &      4.271 &     66.674 &      2.012 \\\\\n",
+      "max   &    116.155 &     28.142 &   2004.761 &    520.368 &   1217.119 &    197.280 &  12508.225 &   1010.115 &    542.204 &     46.671 &     74.367 &     19.734 &    115.694 &     21.833 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
@@ -148,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -158,18 +299,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\\begin{tabular}{lrrrrrrrrrr}\n",
+      "\\begin{tabular}{lrrrrrrrrrrrrrr}\n",
       "\\toprule\n",
-      "{} &  Clin Seed &   Clin &   Random &       SW &  Centered &  Peaks &  CG Erf Seed &  CG Erf &  CG Unit Seed &  CG Unit \\\\\n",
+      "{} &  Conv      &  CLO\\_Conv  &  Rand      &  CLO\\_Rand  &  Unif      &  CLO\\_Unif  &   Cent      &  CLO\\_Cent  &  Peak      &  CLO\\_Peak  &  DLO       &  CLO\\_DLO   &  DLO-U     &  CLO\\_DLO-U \\\\\n",
       "\\midrule\n",
-      "count &      48.00 &  48.00 &    48.00 &    48.00 &     48.00 &  48.00 &        48.00 &   48.00 &         48.00 &       48 \\\\\n",
-      "mean  &     578.62 &   2.06 &   172.82 &    81.63 &   1027.05 &   6.00 &        28.78 &    8.46 &        572.86 &        1 \\\\\n",
-      "std   &    1136.71 &   2.10 &   448.14 &   236.40 &   1969.97 &   5.21 &        26.06 &   16.90 &       1117.02 &        0 \\\\\n",
-      "min   &       3.43 &   0.52 &     5.68 &     2.81 &      3.58 &   1.08 &         2.38 &    0.75 &          2.95 &        1 \\\\\n",
-      "25\\%   &      31.81 &   0.95 &    18.64 &     5.89 &     35.54 &   3.19 &        11.31 &    1.81 &         32.00 &        1 \\\\\n",
-      "50\\%   &     117.17 &   1.40 &    36.92 &     9.76 &    225.67 &   4.41 &        21.83 &    2.91 &        125.29 &        1 \\\\\n",
-      "75\\%   &     636.20 &   2.02 &   146.74 &    17.97 &   1124.13 &   6.55 &        37.12 &    6.07 &        635.46 &        1 \\\\\n",
-      "max   &    5530.33 &  12.48 &  3021.70 &  1132.05 &   9431.17 &  31.23 &       129.47 &  103.59 &       5262.86 &        1 \\\\\n",
+      "count &      48.00 &      48.00 &      48.00 &      48.00 &      48.00 &      48.00 &       48.00 &      48.00 &      48.00 &      48.00 &      48.00 &      48.00 &      48.00 &         48 \\\\\n",
+      "mean  &     889.87 &       1.69 &     957.04 &     202.25 &    1940.67 &      89.39 &   133099.98 &     685.28 &    1257.23 &       5.28 &      36.91 &      11.75 &     899.60 &          1 \\\\\n",
+      "std   &    2046.31 &       1.52 &    1329.84 &     593.57 &    3757.47 &     376.72 &   297759.95 &    1229.98 &    2249.28 &       2.98 &      48.42 &      25.50 &    2060.22 &          0 \\\\\n",
+      "min   &       5.32 &       0.54 &      25.65 &       3.92 &      44.76 &       2.47 &      348.55 &       3.36 &      10.04 &       1.72 &       3.41 &       0.64 &       5.20 &          1 \\\\\n",
+      "25\\%   &      27.13 &       0.88 &     173.11 &      20.80 &     162.67 &       6.56 &     3420.52 &      55.85 &      75.99 &       3.05 &      10.79 &       1.53 &      29.82 &          1 \\\\\n",
+      "50\\%   &      89.39 &       1.24 &     330.19 &      48.83 &     522.25 &       9.18 &    14220.39 &     174.82 &     210.33 &       4.53 &      17.55 &       2.34 &      92.59 &          1 \\\\\n",
+      "75\\%   &     466.09 &       1.79 &    1117.59 &     112.11 &    1673.80 &      18.41 &    86326.78 &     633.98 &    1484.11 &       6.53 &      45.19 &       4.21 &     459.90 &          1 \\\\\n",
+      "max   &   10632.10 &       9.51 &    5157.01 &    3016.01 &   18715.42 &    2408.19 &  1515458.16 &    5150.83 &   11002.92 &      13.33 &     250.39 &     132.92 &   10587.19 &          1 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
@@ -177,6 +318,7 @@
     }
    ],
    "source": [
+    "\n",
     "objs_scaled = F['objectives']\n",
     "scaledrow = np.copy(objs_scaled[:,testRatioPosition])\n",
     "for i in range(objs_scaled.shape[1]):\n",
@@ -930,7 +1072,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
